--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,8 @@ body {
     background-color: #14213D;
     font-weight: 600;
     
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Righteous', cursive;
+    font-family: 'Comfortaa', cursive;
 
 }
 @media (max-width: 978px) {
